--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "seed": "ts-node src/scripts/seed.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "mongoose": "^9.1.2",
     "socket.io": "^4.8.3",
     "ws": "^8.19.0",
     "y-websocket": "^3.0.0",
