--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "@types/simple-peer": "^9.11.9",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.3",
     "y-monaco": "^0.1.6",
     "y-websocket": "^3.0.0",
